deploy/overlays/prod/node-envida/components/portal-gateway/portal-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envida-portal-gateway
spec:
  gatewayClassName: traefik
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      hostname: portal.envida.fehr.mumc.nl
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: envida-portal-route
spec:
  parentRefs:
    - name: envida-portal-gateway
  hostnames:
    - portal.envida.fehr.mumc.nl
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: portal
          port: 3000
